--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.compubase.tasaoq"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        versionCode 5
+        versionName "1.4"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -15,6 +15,16 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
@@ -52,6 +62,7 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
     implementation project(':paytabs_sdk-v4.0.0')
     implementation 'com.github.dbachelder:CreditCardEntry:1.4.9'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
 
 
 //    compile('com.twitter.sdk.android:twitter:3.3.0@aar') {
